<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/acc"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_acc_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_acc"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_gravity"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_magnetic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/magnetic"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_acc"/>

    <TextView
        android:id="@+id/textView_magnetic_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_magnetic"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_gravity"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gyroscope"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_magnetic"/>

    <TextView
        android:id="@+id/textView_gyroscope_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_gyroscope"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_gravity"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gravity"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_gyroscope"/>

    <TextView
        android:id="@+id/textView_gravity_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_gravity"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_gravity"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_lin_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lin_acc"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_gravity"/>

    <TextView
        android:id="@+id/textView_lin_acc_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_lin_acc"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_gravity"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/orientation"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_lin_acc"/>

    <TextView
        android:id="@+id/textView_orientation_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/orientation_values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_orientation"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_orientation"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textView_global_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/earth_acc"
        android:textAlignment="textStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_orientation"/>

    <TextView
        android:id="@+id/textView_global_acc_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/values"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_global_acc"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@+id/textView_global_acc"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>